--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@500&family=Poppins:wght@500&family=Roboto+Slab:wght@500&family=Work+Sans:wght@500&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Roboto+Slab:wght@400;700;900&display=swap"
+      rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
